feat 305,306: 테스트코드 추가